Box shadow when hovering on card. Fixed some spacing.

--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@ html, body {
 }
 
 .card {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
   margin-bottom: 2rem;
 }
 
@@ -67,8 +67,12 @@ html, body {
 
 .hero.is-info.is-bold {
   background: #0575E6; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #021B79, #0575E6); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  position: fixed;
+  right: 0;
+  top: 0;
+  left: 0;
+
+  z-index: 1;
 
   margin-bottom: 1.5rem;
   box-shadow: 0 2px 3px rgba(10, 10, 10, .1), 0 0 0 1px rgba(10, 10, 10, .1);
@@ -112,10 +116,21 @@ html, body {
 
 .footer {
   padding: 15px;
+  margin-top: 25px;
 }
 
 @media screen and (max-width: 1024px) {
-  .container {
+  .content-container {
     margin: 0 10px;
   }
+}
+
+.intro {
+  margin-top: 50px;
+}
+
+a .card:hover {
+  -webkit-box-shadow: 0 0 25px 0 rgba(5, 118, 230, 0.5);
+  -moz-box-shadow: 0 0 25px 0 rgba(5, 118, 230, 0.5);
+  box-shadow: 0 0 25px 0 rgba(5, 118, 230, 0.5);
 }
